Lighthouse A11y score fix: Dark calc button bg colour for better contrast

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
     }
 
     .radio-input {
-        @apply cursor-pointer relative size-5 appearance-none rounded-full border border-gray-300 bg-white before:absolute before:inset-1 before:rounded-full before:bg-white not-checked:before:hidden checked:border-teal-600 checked:bg-teal-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-teal-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:before:bg-gray-400 forced-colors:appearance-auto forced-colors:before:hidden;
+        @apply cursor-pointer relative size-5 appearance-none rounded-full border border-gray-300 bg-white before:absolute before:inset-1 before:rounded-full before:bg-white not-checked:before:hidden checked:border-teal-700 checked:bg-teal-700 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-teal-700 disabled:border-gray-300 disabled:bg-gray-100 disabled:before:bg-gray-400 forced-colors:appearance-auto forced-colors:before:hidden;
     }
 
     .radio-label {
@@ -38,7 +38,7 @@
     }
 
     .button-submit {
-        @apply bg-teal-600 border-teal-600 px-3 text-white hover:bg-teal-700 hover:border-teal-700;
+        @apply bg-teal-700 border-teal-700 px-3 text-white hover:bg-teal-800 hover:border-teal-800;
     }
 
     .button-reset {
